fix: prevent quoted poll text overflow with ellipsis (#330)

--- a/src/v2/styles/MessageInput/MessageInput-layout.scss
+++ b/src/v2/styles/MessageInput/MessageInput-layout.scss
@@ -166,6 +166,11 @@
 
   .str-chat__quoted-message-preview {
     padding: var(--str-chat__spacing-2);
+
+    .str-chat__quoted-poll-preview__name {
+      @include utils.ellipsis-text();
+      overflow-x: hidden; // force ellipsis to show
+    }
   }
 
   .str-chat__recording-permission-denied-notification {
